Start app outline

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherApp</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="weather"></div>
+        <input type="text" name="location" id="locationbtn">
+        <button type="submit" id="submitbtn">Fetch</button>
+    </div>
 </body>
 </html>
