Basic script and styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="weather"></div>
-        <input type="text" name="location" id="locationbtn">
+        <div id="city">Weather</div>
+        <img src="http://openweathermap.org/img/wn/50d@4x.png" alt="" id="weather" width="200px" height="200px">
+        <div id="temp">&degF</div>
+        <div id="conditions">Conditions</div>
+        <input type="text" name="location" id="locationbtn" placeholder="Enter City Name...">
         <button type="submit" id="submitbtn">Fetch</button>
     </div>
 </body>
